editor.css
#editorArea {
    display: block;
    background-color: #000000;
}
#codeEditorContainer {
    position: relative;
    overflow: visible;
    width: 100%;
}
#codeEditor, #highlighted {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    box-sizing: border-box;
    margin: 0;
    border: none;
    font-family: monospace;
    font-size: var(--font-size-default);
    font-weight: var(--font-weight-default);
    line-height: var(--line-height-default);
    resize: none;
    tab-size: 4;
    background: transparent;
    overflow: hidden;
    padding-left: 1ch;
    padding-right: 1ch;
    padding-top: var(--line-height-default);
    padding-bottom: var(--line-height-default);
    min-height: calc(5 * var(--line-height-default))
}
code[class*="language-"], pre[class*="language-"] { /*overrides the style */
    line-height: var(--line-height-default) !important;
}
#highlighted {
    z-index: 0;
    background-color: var(--background-color-inputbox);
    border-radius: 0;
    outline: none;
    pointer-events: none;
}
#codeEditor {
    z-index: 1;
    color: transparent;
    background-color: transparent;
    caret-color: white;
    overflow: hidden;
}
/* #highlighted * {
    font-family: monospace;
    font-size: var(--font-size-default);
    font-weight: var(--font-weight-default);
    white-space: pre-wrap;
    overflow-wrap: break-word;
} */

.output {
    height: 100%;
    color: #fff;
    padding: 10px;
    font-family: monospace;
    font-size: var(--font-size-default);
    font-weight: var(--font-weight-default);
    overflow-y: auto;
    overflow-wrap: break-word;
    white-space: pre-wrap;
    box-sizing: border-box;
    background-color: var(--background-color-inputbox);
    min-height: var(--line-height-default);
    padding-left: 1ch;
    padding-right: 1ch;
    padding-top: var(--line-height-default);
    padding-bottom: var(--line-height-default);
}

